fix: fix overflow bug at home section

--- a/trilha-thomas/src/app/components/pages/home/home.responsive.scss
+++ b/trilha-thomas/src/app/components/pages/home/home.responsive.scss
@@ -14,6 +14,7 @@
     color: white;
     border-radius: 30px;
     background-color: $section-background-color;
+    overflow: hidden;
   }
 
   .text-introduction {
